fix(card): Fixed layout for opened card going off screen

--- a/src/modules/playScreen/style.sass
+++ b/src/modules/playScreen/style.sass
@@ -100,13 +100,13 @@
     .textContainer
       flex: 1
       display: flex
-      align-items: center
+      align-items: flex-start
       justify-content: center
       text-align: center
       font-size: 2em
       font-weight: 100
       line-height: 1.8
-      padding: 30px 30px 0
+      padding: 30px 30px 20px
       overflow-y: auto
 
       .text
